# Bejeweled

./: .gitignore  CMakeLists.txt  CustButton.qml  ImageButton.qml  ImagesButton.qml  PopupMask.qml  canvasImagesButton.qml  config_page.qml  database_service.cpp  database_service.h  game_board.qml  game_page.qml  game_service.cpp  game_service.h  image.qrc  main.cpp  main.qml  qml.qrc  res.qrc  sound_service.cpp  sound_service.h  stop_menu.qml  title_page.qml  translation.cpp  translation.h
lang/: en_US.ts  zh_CN.ts
qml/: back_ground.qml  config_control_panel.qml  config_general_panel.qml  config_graphic_panel.qml  config_other_panel.qml  config_page.qml  config_sound_panel.qml  failed_panel.qml  game_board.qml  game_page.qml  main_window.qml  score_page.qml  stop_menu.qml  success_panel.qml  title_page.qml
qml/component/: CanvasImagesButton.qml  ComboBoxOption.qml  CustButton.qml  ImagesButton.qml  SliderOption.qml  SwitchOption.qml
